mudando fontes css

--- a/main.css
+++ b/main.css
@@ -31,6 +31,10 @@ body {
     font-family: 'Tektur', cursive;
 }
 
+p {
+    font-family: 'Tektur', cursive;
+}
+
 #cabecalho {
     background: url(https://wallpapers.com/images/hd/genshin-impact-xiao-with-lantern-yp7fm5v79zts1kny.jpg);
     text-align: center;
