--- a/main.css
+++ b/main.css
@@ -13,7 +13,7 @@ h3 {
     color: #2aeaff;
     background-color: rgb(34, 9, 158);
     padding: 5px;
-    font-family: 'Lumanosimo', cursive, sans-serif;
+    font-family: 'Lumanosimo', cursive;
 }
 
 .data {
@@ -28,11 +28,12 @@ body {
     font-size: 1em;
     font-family: Arial, Helvetica, sans-serif;
     background: #e6e6e6;
-    font-family: 'Tektur', cursive, sans-serif;
+    font-family: 'Tektur', cursive;
 }
 
 p {
     font-family: 'Tektur', cursive;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 #cabecalho {
